<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtView_Title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:text="@string/txtView_Title1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtView_Title2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView_Title1" />

    <EditText
        android:id="@+id/editText_alcool"
        android:layout_width="134dp"
        android:layout_height="49dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="0.00"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/txtView_Title_Alcool"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:text="@string/firstValue" />

    <EditText
        android:id="@+id/editText_gasolina"
        android:layout_width="134dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="0.00"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/txtView_Title_Gasolina"
        app:layout_constraintTop_toBottomOf="@+id/editText_alcool"
        tools:text="@string/firstValue" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="52dp"
        android:text="@string/txtView_Title3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/txtView_Title_Alcool"
        android:layout_width="54dp"
        android:layout_height="22dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="191dp"
        android:text="@string/txtView_Title_Alcool"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtView_Title_Gasolina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="35dp"
        android:text="@string/txtView_Title_Gasolina"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView_Title_Alcool" />

    <Button
        android:id="@+id/button_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="48dp"
        android:text="@string/button_calcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_gasolina" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="163dp"
        android:text="@string/txtView_resultado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView_Title_Gasolina" />

    <EditText
        android:id="@+id/editText_resultado"
        android:layout_width="189dp"
        android:layout_height="38dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:background="@android:color/holo_blue_light"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/button_calcular" />
</android.support.constraint.ConstraintLayout>